2019-1/230/users/4031/executions/1576_2896.log
== TEST (2019-03-13 17:12:57) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("codebench:")

# Impressao de saidasprint(var)
print()
-- OUTPUT:
2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 17:12:58) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("codebench:")

# Impressao de saidasprint(var)
print()
-- EXECUTION TIME:
0.183049
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:

-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 17:14:04) 
-- CODE:
var=input("python:")

# Leitura de valores de entrada
var = input("python:")

# Impressao de saidasprint(var)
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 17:14:05) 
-- CODE:
var=input("python:")

# Leitura de valores de entrada
var = input("python:")

# Impressao de saidasprint(var)
print()
-- EXECUTION TIME:
0.143187
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1576/2896/main.py", line 4, in <module>
    var = input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 17:15:28) 
-- CODE:
var=input("python:")

# Leitura de valores de entrada
var = input("python:")

print(var)
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 17:15:28) 
-- CODE:
var=input("python:")

# Leitura de valores de entrada
var = input("python:")

print(var)
print()
-- EXECUTION TIME:
0.150388
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1576/2896/main.py", line 4, in <module>
    var = input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 17:18:31) 
-- CODE:
var=input("python:")

# Leitura de valores de entrada
var = input("python:")


print(var)
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 17:18:31) 
-- CODE:
var=input("python:")

# Leitura de valores de entrada
var = input("python:")


print(var)
print(var)
-- EXECUTION TIME:
0.131136
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1576/2896/main.py", line 4, in <module>
    var = input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 17:18:33) 
-- CODE:
var=input("python:")

# Leitura de valores de entrada
var = input("python:")


print(var)
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 17:18:33) 
-- CODE:
var=input("python:")

# Leitura de valores de entrada
var = input("python:")


print(var)
print(var)
-- EXECUTION TIME:
0.139959
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1576/2896/main.py", line 4, in <module>
    var = input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 17:18:34) 
-- CODE:
var=input("python:")

# Leitura de valores de entrada
var = input("python:")


print(var)
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 17:18:34) 
-- CODE:
var=input("python:")

# Leitura de valores de entrada
var = input("python:")


print(var)
print(var)
-- EXECUTION TIME:
0.129236
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1576/2896/main.py", line 4, in <module>
    var = input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 17:32:32) 
-- CODE:
var=input("python:")

# Leitura de valores de entrada
print(var = input("python: "))
		


print(var)
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(var = input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 17:32:33) 
-- CODE:
var=input("python:")

# Leitura de valores de entrada
print(var = input("python: "))
		


print(var)
print(var)
-- EXECUTION TIME:
0.132675
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1576/2896/main.py", line 4, in <module>
    print(var = input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 17:39:42) 
-- CODE:
var=input("python:")

# Leitura de valores de entrada
print(var = input("python: "))
		

print(var)
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(var = input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 17:39:47) 
-- CODE:
var=input("python:")

# Leitura de valores de entrada
print(var = input("python: "))
		

print(var)
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(var = input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 17:39:48) 
-- CODE:
var=input("python:")

# Leitura de valores de entrada
print(var = input("python: "))
		

print(var)
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(var = input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 17:39:49) 
-- CODE:
var=input("python:")

# Leitura de valores de entrada
print(var = input("python: "))
		

print(var)
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(var = input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 17:39:50) 
-- CODE:
var=input("python:")

# Leitura de valores de entrada
print(var = input("python: "))
		

print(var)
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(var = input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 17:39:50) 
-- CODE:
var=input("python:")

# Leitura de valores de entrada
print(var = input("python: "))
		

print(var)
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(var = input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 17:39:51) 
-- CODE:
var=input("python:")

# Leitura de valores de entrada
print(var = input("python: "))
		

print(var)
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(var = input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 17:39:51) 
-- CODE:
var=input("python:")

# Leitura de valores de entrada
print(var = input("python: "))
		

print(var)
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(var = input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 17:39:56) 
-- CODE:
var=input("python:")

# Leitura de valores de entrada
print(var = input("python: "))
		

print(var)
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(var = input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 17:39:58) 
-- CODE:
var=input("python:")

# Leitura de valores de entrada
print(var = input("python: "))
		

print(var)
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(var = input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 17:39:59) 
-- CODE:
var=input("python:")

# Leitura de valores de entrada
print(var = input("python: "))
		

print(var)
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(var = input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 17:40:00) 
-- CODE:
var=input("python:")

# Leitura de valores de entrada
print(var = input("python: "))
		

print(var)
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(var = input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 17:40:03) 
-- CODE:
var=input("python:")

# Leitura de valores de entrada
print(var = input("python: "))
		

print(var)
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(var = input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 17:40:04) 
-- CODE:
var=input("python:")

# Leitura de valores de entrada
print(var = input("python: "))
		

print(var)
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(var = input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 17:40:05) 
-- CODE:
var=input("python:")

# Leitura de valores de entrada
print(var = input("python: "))
		

print(var)
print(var)
-- EXECUTION TIME:
0.198835
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1576/2896/main.py", line 4, in <module>
    print(var = input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 17:40:06) 
-- CODE:
var=input("python:")

# Leitura de valores de entrada
print(var = input("python: "))
		

print(var)
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(var = input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 17:40:07) 
-- CODE:
var=input("python:")

# Leitura de valores de entrada
print(var = input("python: "))
		

print(var)
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(var = input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 17:47:22) 
-- CODE:
var=input("python:")

# Leitura de valores de entrada
(var = input("python: "))
		
print(var)
-- ERROR:
File "XXXX", line 4
    (var = input())
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 17:47:34) 
-- CODE:


# Leitura de valores de entrada
(var = input("python: "))
		
print(var)
-- ERROR:
File "XXXX", line 4
    (var = input())
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 17:47:35) 
-- CODE:


# Leitura de valores de entrada
(var = input("python: "))
		
print(var)
-- ERROR:
File "XXXX", line 4
    (var = input())
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 17:47:37) 
-- CODE:


# Leitura de valores de entrada
(var = input("python: "))
		
print(var)
-- ERROR:
File "XXXX", line 4
    (var = input())
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 17:47:38) 
-- CODE:


# Leitura de valores de entrada
(var = input("python: "))
		
print(var)
-- EXECUTION TIME:
0.138495
-- ERROR:
  File "/home/codebench/codes/1576/2896/main.py", line 4
    (var = input())
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 17:47:39) 
-- CODE:


# Leitura de valores de entrada
(var = input("python: "))
		
print(var)
-- ERROR:
File "XXXX", line 4
    (var = input())
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 17:47:39) 
-- CODE:


# Leitura de valores de entrada
(var = input("python: "))
		
print(var)
-- EXECUTION TIME:
0.13042
-- ERROR:
  File "/home/codebench/codes/1576/2896/main.py", line 4
    (var = input())
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 17:48:44) 
-- CODE:

(var = input("python: "))
		
print(var)
-- ERROR:
File "XXXX", line 2
    (var = input())
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 17:48:45) 
-- CODE:

(var = input("python: "))
		
print(var)
-- ERROR:
File "XXXX", line 2
    (var = input())
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 17:48:46) 
-- CODE:

(var = input("python: "))
		
print(var)
-- EXECUTION TIME:
0.194229
-- ERROR:
  File "/home/codebench/codes/1576/2896/main.py", line 2
    (var = input())
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 17:48:47) 
-- CODE:

(var = input("python: "))
		
print(var)
-- ERROR:
File "XXXX", line 2
    (var = input())
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 17:49:29) 
-- CODE:

(var = input("python: "))
		
print(var)
-- ERROR:
File "XXXX", line 2
    (var = input())
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 17:55:39) 
-- CODE:



var = input("Digite o nome:Python")

print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 17:55:41) 
-- CODE:



var = input("Digite o nome:Python")

print(var)
-- EXECUTION TIME:
0.153234
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 16:56:54) 
-- CODE:
nome = input("Digite o nome: codebench")

print (nome)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 16:56:58) 
-- CODE:
nome = input("Digite o nome: codebench")

print (nome)
-- EXECUTION TIME:
0.161194
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
